HelloWorld/force-app/main/default/objects/Orient__c/Orient__c.object-meta.xml
<CustomObject>
    <label>Orient</label>
    <nameField>
        <displayFormat>OID-{000000}</displayFormat>
        <label>Orient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>