HelloWorld/force-app/main/default/objects/Orient__c/fields/Name_of_student__c.field-meta.xml
<CustomField>
    <fullName>Name_of_student__c</fullName>
    <label>Name of student</label>
    <length>12</length>
    <type>Text</type>
</CustomField>