HelloWorld/force-app/main/default/objects/Orient__c/fields/Students_eligible_in_last_yesr__c.field-meta.xml
<CustomField>
    <fullName>Students_eligible_in_last_yesr__c</fullName>
    <label>Students eligible in last yesr</label>
    <length>20</length>
    <type>Text</type>
</CustomField>