HelloWorld/force-app/main/default/objects/Orient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_score__c</columns>
    <columns>Name_of_student__c</columns>
    <columns>Name_of_subjects__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>